@@ -1,1 +1,8 @@
 SUBDIRS = src po etpo
+
+EXTRA_DIST =                            \
+        intltool-extract.in             \
+        intltool-merge.in               \
+        intltool-update.in
+
+DISTCLEANFILES = intltool-extract intltool-merge intltool-update
