@@ -4,7 +4,8 @@ INCLUDES =				\
 bin_PROGRAMS = krb5-auth-dialog
 
 krb5_auth_dialog_SOURCES =	\
-	krb5-auth-dialog.c
+	krb5-auth-dialog.c      \
+	dummy-strings.c
 
 krb5_auth_dialog_LDADD = @NETWORK_MANAGER_LIBS@ @KRB5_LIBS@ @GNOME_LIBS@
 
